Bug 56776 - UI: Column Headers not updated after modification to formula mode 'Excel R1C1'
Summary: UI: Column Headers not updated after modification to formula mode 'Excel R1C1'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.alpha1
Hardware: Other Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.0.0 target:3.6.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-11-05 15:34 UTC by Rainer Bielefeld Retired
Modified: 2013-04-27 16:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-11-05 15:34:24 UTC
I observe the problem with "LibreOffice 3.6.3.2" German UI/ German Locale [Build-ID: 58f22d5] on German WIN7 Home Premium (64bit) 

0. If necessary, open new spreadsheet and modify menu 'Tools -> Options -> Calc 
   -> Formula - Formula syntax' to "Cald A1", Exit LibO, Restart
1. From LibO Start Center open new Spreadsheet
   > Column headers show A, B, C, ...
2. menu 'Tools -> Options -> Calc  -> Formula - Formula syntax', modify to
   "Excel R1C1" <ok>
   Expected: Headers should change immediately to 1, 2, 3, ...
   Actual: Nothing happens, Changes become visible for newly documents or after
           close / repoen.

Same with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: 1219bc)]"  {tinderbox: @16, pull time 2012-11-01 23:27:25} on German WIN7 Home Premium (64bit) with separate User Profile for Master Branch

Worked fine with LibO 3.5.7.2, so regression.

Direction from "Cald A1" to "Excel R1C1" also does not work
Comment 1 billhook 2012-11-06 01:49:57 UTC
I could reproduce the issue on LO 3.6.3.1 Windows Vista 32bit, but with slightly different behaviour to the OP.

The actual behaviour I see:

The correct column headers become visible after either 

a) Switching away to a different application / window then switching back to LO. When I do that, all the columns are updated correctly.

or

b) Clicking inside a particular column will update the heading for that column.

I did not have to close and reopen the document to see correct column headers.
Comment 2 Rainer Bielefeld Retired 2012-11-06 07:03:16 UTC
So it is, billhook's descriptions are more precise than mine

Already broken with 3.6.0.0.alpha+ 2012-04-26 own profile MinGW

Still worked fine with Server installation of  Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 475d0c5-829fc92-39746e8-206648e-fefd87]" (2012-02-14)

@Spreadsheet Team
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 3 Markus Mohrhard 2012-11-13 06:17:04 UTC
I know which commits broke this but I have no idea how it worked in 3.5 so I have no idea how to fix it ATM.
Comment 4 Kohei Yoshida 2012-11-13 14:37:59 UTC
Yeah I've been seeing this a while now.  We just need to invalidate the header area to get it repainted somehow.  Not sure which event ID to invalidate though, that's the problem...
Comment 5 Kohei Yoshida 2012-11-13 19:01:42 UTC
I'll take it.  It should be an easy fix.
Comment 6 Not Assigned 2012-11-13 19:19:26 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ee088ece2abbdff699f44aa4a5b7e3c8b82aa48

fdo#56776: Change in formula options should cause repaint.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Not Assigned 2012-11-13 20:06:39 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6ec91aa4414bceeef506479aba6418564d4a1ba5&g=libreoffice-3-6

fdo#56776: Change in formula options should cause repaint.


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Not Assigned 2012-11-14 09:00:07 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=372362e4d1d5380d52e1862df9e8911090c18e14&g=libreoffice-3-6-4

fdo#56776: Change in formula options should cause repaint.


It will be available already in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Markus Mohrhard 2012-11-14 09:01:07 UTC
Marking that as fixed.
Comment 10 billhook 2012-11-19 02:12:25 UTC
I just tried this on 3.6.4.1 and the bug still happens.
Also, I noticed that this bug has not been included in the "List of fixed bugs" for 3.6.4.1
Comment 11 Rainer Bielefeld Retired 2012-11-19 05:10:41 UTC
@billhook
3.6.4.1 tag has been created 2012-11-13, so the fix dated 2012-11-14 cna not be in 3.6.4.1, but should be in 3.6.4.2
Comment 12 Joel Madero 2013-04-27 16:09:26 UTC
Updating version as Rainer has stated that it was at least broken with MinGW 3.6.0.0 alpha

This is part of regular FDO maintenance to check regressions against minor releases.