fdo#56776: Change in formula options should cause repaint.

Else Calc would fail to update the column headers due to A1 to R1C1
change (and vise versa).

Change-Id: I2c403212f5bc539aea92370e60da96f480549d6d